# Browser-Agent

./: .env  .gitignore  README.md  agent.py  agent_types.py  app.py  errors.py  index.py  logger.py  pyproject.toml  requirements-test.txt  session.py
browser/: __init__.py  cdp.py  cdptab.py  tab.py  types.py  viewport.py
browser/launch/: __init__.py  browserbase.py  local.py  playwright_adapter.py
loop/: __init__.py  action_cache.py  action_verifier.py  checkpoint.py  child.py  confidence_gate.py  history.py  monitor.py  perception.py  planner.py  policy.py  repeat_detector.py  router.py  state.py  streaming_monitor.py  verifier.py
memory/: __init__.py  site_kb.py  workflow.py
model/: __init__.py  adapter.py  decoder.py  google.py
tests/: __init__.py  conftest.py
tests/integration/: mock_adapter.py  mock_tab.py  test_child.py  test_compaction.py  test_live_challenges.py  test_loop.py  test_options.py  test_policy_integration.py  test_preaction_hook.py  test_repeat_detector.py  test_verifier_gate.py  test_writestate.py
tests/unit/: test_action_cache.py  test_decoder.py  test_gate.py  test_history.py  test_history_toolids.py  test_normalize.py  test_perception_cache.py  test_policy.py  test_repeat_detector.py  test_router.py  test_state.py  test_streaming_monitor.py
